memperbaiki penamaan file

--- a/index.html
+++ b/index.html
@@ -1,80 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
+
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="sortcut icon" type="image/png" href="gambar/ewarung.png"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="sortcut icon" type="image/png" href="gambar/ewarung.png" />
   <title>e-Warung</title>
-<style>
-table, th, td {
-   border-radius:10px ;
-	 border: 0px solid black; background-color: #00CED1;
-    border-collapse: collapse;
-    padding: 2px 20px 2px 20px;
+  <style>
+    table,
+    th,
+    td {
+      border-radius: 10px;
+      border: 0px solid black;
+      background-color: #00CED1;
+      border-collapse: collapse;
+      padding: 2px 20px 2px 20px;
     }
 
-  .img-bulat {
-  border: 1px solid black;
-  padding: 1px;
-  border-collapse: collapse;
-  border-radius: 10%;
-  position: center;
+    .img-bulat {
+      border: 1px solid black;
+      padding: 1px;
+      border-collapse: collapse;
+      border-radius: 10%;
+      position: center;
     }
-  .img-kecil {
-  border: 0px solid black;
-  padding: 0px;
-  border-collapse: collapse;
-  border-radius: 10%;
-  position: center;}
 
-  body {background-color: #00CED1;
-        border:2px black;}
-  h2 {text-align: center;
-      color: red}
-  img {border-radius: 5px 5px 15px 15px;
-    border: 1px solid black;
-    position: relative;
-    z-index: 1;
-    top: 0px;}
-  p {position: absolute;
-    top: 10px;
-    left: 40%;
-    z-index: 5;
-    color: red;
-    font-size: 7;
-    font-family: "tahoma";}
-  tr {height:80px}
-  th{height:40}
-</style>
+    .img-kecil {
+      border: 0px solid black;
+      padding: 0px;
+      border-collapse: collapse;
+      border-radius: 10%;
+      position: center;
+    }
+
+    body {
+      background-color: #00CED1;
+      border: 2px black;
+    }
+
+    h2 {
+      text-align: center;
+      color: red
+    }
+
+    img {
+      border-radius: 5px 5px 15px 15px;
+      border: 1px solid black;
+      position: relative;
+      z-index: 1;
+      top: 0px;
+    }
+
+    p {
+      position: absolute;
+      top: 10px;
+      left: 40%;
+      z-index: 5;
+      color: red;
+      font-size: 7;
+      font-family: "tahoma";
+    }
+
+    tr {
+      height: 80px
+    }
+
+    th {
+      height: 40
+    }
+  </style>
 </head>
 
 
 <body>
-<img src="sembako/supermarket.jpg" width="100%"><p><b>e-Warung</b></p>
-<h2> <b>MENU TRANSAKSI </b></h2>
-<table style="" text-align="center" cellpadding="1" ;="" border="0" width="100%" height="100px">
-	<tbody>
-    <tr>
-      <th> <a href="sembakoSabun.html"><img class="img-bulat" src="sembako/sembako3.jpg" height="75px" width="80"> </a></th>
-     <th> <a href="pulsa.html"><img class="img-bulat" src="gambar/pojok pulsa.jpg" height="75px" width="80"> </a></th>
-     <th> <a href="wifi.html"><img class="img-bulat" src="gambar/wifi.png" height="75px" width="80"> </a></th> 
-     <th> <a href="pln.html"><img class="img-bulat" src="gambar/pln.jpg" height="75px" width="80"> </a></th>
-       
-     
-    </tr>
-     <tr> 
-        <th><h>SEMBAKO</h></th>
-        <th><h>PULSA</h></th>
-        <th><h>WiFi</h></th>
-        <th><h>PLN</h></th>
-     </tr> 
-     <tr>
-     <th> <a href="https://api.whatsapp.com/send?phone=6281270255590&text=s.2580"><img class="img-bulat" src="gambar/coin.jpg" height="75px" width="80"> </a></th>
-             <th colspan="3" ><h2>Untuk Isi Saldo Hubungi:</h2><h2>AGEN Terdekat</h2></th>
-     </tr>
-     <tr> 
-        <th><h>CEK SALDO</h></th></tr>
+  <img src="sembako/supermarket.jpg" width="100%">
+  <p><b>e-Warung</b></p>
+  <h2> <b>MENU TRANSAKSI </b></h2>
+  <table style="" text-align="center" cellpadding="1" ;="" border="0" width="100%" height="100px">
+    <tbody>
+      <tr>
+        <th> <a href="sembakoSabun.html"><img class="img-bulat" src="sembako/sembako3.jpg" height="75px" width="80">
+          </a></th>
+        <th> <a href="pulsa.html"><img class="img-bulat" src="gambar/pojok-pulsa.jpg" height="75px" width="80"> </a>
+        </th>
+        <th> <a href="wifi.html"><img class="img-bulat" src="gambar/wifi.png" height="75px" width="80"> </a></th>
+        <th> <a href="pln.html"><img class="img-bulat" src="gambar/pln.jpg" height="75px" width="80"> </a></th>
 
-</tbody></table>
-</body></html>
+
+      </tr>
+      <tr>
+        <th>
+          <h>SEMBAKO</h>
+        </th>
+        <th>
+          <h>PULSA</h>
+        </th>
+        <th>
+          <h>WiFi</h>
+        </th>
+        <th>
+          <h>PLN</h>
+        </th>
+      </tr>
+      <tr>
+        <th> <a href="https://api.whatsapp.com/send?phone=6281270255590&text=s.2580"><img class="img-bulat"
+              src="gambar/coin.jpg" height="75px" width="80"> </a></th>
+        <th colspan="3">
+          <h2>Untuk Isi Saldo Hubungi:</h2>
+          <h2>AGEN Terdekat</h2>
+        </th>
+      </tr>
+      <tr>
+        <th>
+          <h>CEK SALDO</h>
+        </th>
+      </tr>
+
+    </tbody>
+  </table>
+</body>
+
+</html>
