--- a/wifi.html
+++ b/wifi.html
@@ -1,100 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
+
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="sortcut icon" type="image/png" href="gambar/ewarung.png"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="sortcut icon" type="image/png" href="gambar/ewarung.png" />
   <title>home</title>
 
   <title>wifi</title>
-<style>
-/* DASAR DASAR */
-table, th, td {
-   border-radius:10px ;
-	 border: 0px solid black; background-color: #00CED1;
-    border-collapse: collapse;
-    padding: 0px 40px 1px 40px;
-    text-align: left;
-    font-family:Arial;
-    font-size:20px;
-    font-weight:bold;}
-.img-bulat {
-  border: 1px solid black;
-  padding: 1px;
-  border-collapse: collapse;
-  border-radius: 10%;
-  position: center;}
-.img-kecil {
-  border: 0px solid black;
-  padding: 0px;
-  border-collapse: collapse;
-  border-radius: 10%;
-  position: center;}
+  <style>
+    /* DASAR DASAR */
+    table,
+    th,
+    td {
+      border-radius: 10px;
+      border: 0px solid black;
+      background-color: #00CED1;
+      border-collapse: collapse;
+      padding: 0px 40px 1px 40px;
+      text-align: left;
+      font-family: Arial;
+      font-size: 20px;
+      font-weight: bold;
+    }
 
-body {background-color: #00CED1;
-  font-family: arial, verdana, sans-serif;
-        border:2px black;}
-h2 {text-align: center;
-      color: red}
-img {border-radius: 5px 5px 15px 15px;
-    border: 1px solid black;
-    position: relative;
-    z-index: 1;
-    top: 0px;}
-p {position: absolute;
-    top: 10px;
-    left: 40%;
-    z-index: 5;
-    color: solid black;
-    font-size: 7;
-    font-family: "tahoma";}
-tr {height:80px}
-th{height:40}
-/* BOTTON BOTTON */
-.myButton {
-  box-shadow:3px 4px 0px 0px #1564ad;
-  background:linear-gradient(to bottom, #FFD700 5%, #DC143C 100%);
-  background-color:#DC143C;
-  border-radius:5px;
-  border:1px solid #337bc4;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff;
-  font-family:Arial;
-  font-size:17px;
-  font-weight:bold;
-  padding:0px 0px;
-  width: 120px;
-  text-align: center;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #528ecc;
-.myButton:hover {
-  background:linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
-  background-color:#378de5;}
-.myButton:active {
-  position:relative;
-  top:1px;}
+    .img-bulat {
+      border: 1px solid black;
+      padding: 1px;
+      border-collapse: collapse;
+      border-radius: 10%;
+      position: center;
+    }
 
+    .img-kecil {
+      border: 0px solid black;
+      padding: 0px;
+      border-collapse: collapse;
+      border-radius: 10%;
+      position: center;
+    }
 
-</style>
+    body {
+      background-color: #00CED1;
+      font-family: arial, verdana, sans-serif;
+      border: 2px black;
+    }
+
+    h2 {
+      text-align: center;
+      color: red
+    }
+
+    img {
+      border-radius: 5px 5px 15px 15px;
+      border: 1px solid black;
+      position: relative;
+      z-index: 1;
+      top: 0px;
+    }
+
+    p {
+      position: absolute;
+      top: 10px;
+      left: 40%;
+      z-index: 5;
+      color: solid black;
+      font-size: 7;
+      font-family: "tahoma";
+    }
+
+    tr {
+      height: 80px
+    }
+
+    th {
+      height: 40
+    }
+
+    /* BOTTON BOTTON */
+    .myButton {
+      box-shadow: 3px 4px 0px 0px #1564ad;
+      background: linear-gradient(to bottom, #FFD700 5%, #DC143C 100%);
+      background-color: #DC143C;
+      border-radius: 5px;
+      border: 1px solid #337bc4;
+      display: inline-block;
+      cursor: pointer;
+      color: #ffffff;
+      font-family: Arial;
+      font-size: 17px;
+      font-weight: bold;
+      padding: 0px 0px;
+      width: 120px;
+      text-align: center;
+      text-decoration: none;
+      text-shadow: 0px 1px 0px #528ecc;
+
+      .myButton:hover {
+        background: linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
+        background-color: #378de5;
+      }
+
+      .myButton:active {
+        position: relative;
+        top: 1px;
+      }
+  </style>
 </head>
+
 <body>
-    <img src="gambar/wifi2.png" width="100%">
-<table 
-      style="" text-align="center" cellpadding="1" ;="" border="0" width="100%" height="70px">
-<tbody width="100%">
-  <tr>
-    <th>
-      <a href="e-warung.html" class="myButton">KEMBALI</a></th><th></th><th></th><th></th>
-      <th><a href="https://api.whatsapp.com/send?phone=6281270255590&amp;text=s.2580" class="myButton">SALDO</a></th>
-    </tr>
-    <tr>
-      <th> <img class="img-bulat" src="gambar/wifi.png" height="75px" width="80"> </a></th>
-      <th colspan="3" >
+  <img src="gambar/wifi2.png" width="100%">
+  <table style="" text-align="center" cellpadding="1" ;="" border="0" width="100%" height="70px">
+    <tbody width="100%">
+      <tr>
+        <th>
+          <a href="index.html" class="myButton">KEMBALI</a></th>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th><a href="https://api.whatsapp.com/send?phone=6281270255590&amp;text=s.2580" class="myButton">SALDO</a></th>
+      </tr>
+      <tr>
+        <th> <img class="img-bulat" src="gambar/wifi.png" height="75px" width="80"> </a></th>
+        <th colspan="3">
 
 
-        <a href="https://api.whatsapp.com/send?phone=6281270255590&amp;text=pjb120.">Bayar WiFi</a>
+          <a href="https://api.whatsapp.com/send?phone=6281270255590&amp;text=pjb120.">Bayar WiFi</a>
 
 
-</table></body></html>
+  </table>
+</body>
+
+</html>
