--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <img src="sembako/supermarket.jpg" width="100%">
   <p><b>e-Warung</b></p>
   <h2> <b>MENU TRANSAKSI </b></h2>
-  <table style="" text-align="center" cellpadding="1" ;="" border="0" width="100%" height="100px">
+  <table text-align="center" cellpadding="1" border="0" width="100%" height="100px">
     <tbody>
       <tr>
         <th> <a href="sembakoSabun.html"><img class="img-bulat" src="sembako/sembako3.jpg" height="75px" width="80">
