--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="sortcut icon" type="image/png" href="Gambar/ewarung.png" />
+  <link rel="sortcut icon" type="image/png" href="gambar/ewarung.png" />
   <title>e-Warung</title>
   <style>
     table,
@@ -82,10 +82,10 @@
       <tr>
         <th> <a href="sembakoSabun.html"><img class="img-bulat" src="sembako/sembako3.jpg" height="75px" width="80">
           </a></th>
-        <th> <a href="pulsa.html"><img class="img-bulat" src="Gambar/pojok-pulsa.jpg" height="75px" width="80"> </a>
+        <th> <a href="pulsa.html"><img class="img-bulat" src="gambar/pojok-pulsa.jpg" height="75px" width="80"> </a>
         </th>
-        <th> <a href="wifi.html"><img class="img-bulat" src="Gambar/wifi.png" height="75px" width="80"> </a></th>
-        <th> <a href="pln.html"><img class="img-bulat" src="Gambar/pln.jpg" height="75px" width="80"> </a></th>
+        <th> <a href="wifi.html"><img class="img-bulat" src="gambar/wifi.png" height="75px" width="80"> </a></th>
+        <th> <a href="pln.html"><img class="img-bulat" src="gambar/pln.jpg" height="75px" width="80"> </a></th>
 
 
       </tr>
@@ -105,7 +105,7 @@
       </tr>
       <tr>
         <th> <a href="https://api.whatsapp.com/send?phone=6281270255590&text=s.2580"><img class="img-bulat"
-              src="Gambar/coin.jpg" height="75px" width="80"> </a></th>
+              src="gambar/coin.jpg" height="75px" width="80"> </a></th>
         <th colspan="3">
           <h2>Untuk Isi Saldo Hubungi:</h2>
           <h2>AGEN Terdekat</h2>
